--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "nodemon": "^1.9.2",
     "serve-static": "^1.10.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
